# database-reports

./: .gitignore  CREDITS  Cargo.toml  DEPLOY.sh  INSTALL  LICENSE  README  README.md  TODO  anononlyanons.py  atypicaldeletions.py  autopatrol_eligibles.py  blankanontalks.py  blankpages.py  blockeduserrights.py  brokenredirects.py  brokensectionanchors.py  brokenwikiprojtemps.py  build-rust.sh  bullshitparams.py  catandtemplessfilepages.py  confirmedusers.py  conflictedfiles.py  coordoverlap.py  createconfiguration.py  cronietab.submit  crontab  crontab.tools  crontab.yarrow  crossredirects.py  dbreps  deletedfilesinarticles.py  deletedredlinkedcats.py  deletedtrans.py  directstubs.py  dubiousstubcats.py  dupefilenames.py  emptycats.py  epontemps.py  excessivefullarticles.py  (+98 more)
.github/: dependabot.yml
build-aux/: test-crontab-sorting
commons/: mostglobalfileusage.py
dbreports/: blankanontalks.py  brokensectionanchors.py  bullshitparams.py  catandtemplessfilepages.py  confirmedusers.py  createconfiguration.py  crossredirects.py  directstubs.py  emptycats.py  epontemps.py  (+42 more)
dbreps2/: Cargo.toml
dbreps2/src/: api.rs  config.rs  enwiki.rs  general.rs  lib.rs  main.rs
dbreps2/src/enwiki/: boteditcount.rs  brokenwikiprojtemps.rs  conflictedfiles.rs  editcount.rs  emptycats.rs  featuredbysize.rs  goodarticlesbysize.rs  largenonfree.rs  linkedmiscapitalizations.rs  linkedmisspellings.rs  longstubs.rs  lotnonfree.rs  newprojects.rs  olddeletiondiscussions.rs  orphanedafds.rs  orphanedsubtalks.rs  overusednonfree.rs  polltemps.rs  potenshbdps1.rs  potenshbdps3.rs  potenshbdps4.rs  potenshblps1.rs  potenshblps2.rs  potenshblps3.rs  projectchanges.rs  shortestbios.rs  stickyprodblps.rs  templatedisambigs.rs  templatesnonfree.rs  unbelievablelifespans.rs  uncatunrefblps.rs  unsourcedblps.rs  untaggedblps.rs  untaggedstubs.rs  untaggedunrefblps.rs  unusednonfree.rs  unusedtemplates.rs  unusedtemplatesfiltered.rs  usercats.rs  webhostpages.rs
dbreps2/src/general/: articlesmostredirects.rs  blankpages.rs  dupefilenames.rs  excessiveips.rs  excessiveusers.rs  indeffullredirects.rs  indefips.rs  linkedemailsinarticles.rs  linkedredlinkedcats.rs  longshortdescs.rs  oldeditors.rs  ownerlessuserpages.rs  pollcats.rs  selfcatcats.rs  uncatcats.rs  uncattemps.rs  userarticlestreaks.rs  userlinksinarticles.rs  userstreaks.rs
(+151 files in other folders)
