[package]
name = "dbreps2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
clap = { version = "4.3.0", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.8"
log = "0.4"
mwbot = "0.5.0-alpha.3"
mysql_async = { version = "0.32.2", default-features = false, features = ["minimal"] }
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
thousands = "0.2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.24", features = ["full"] }
toml = "0.7.4"
toolforge = { version = "5.0", features = ["mysql"] }
wikipedia_prosesize = "0.1.0-alpha.1"
