[package]
name = "dbreps2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.13", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4"
mwbot = "0.6.0"
mysql_async = { version = "0.34", default-features = false, features = ["minimal"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thousands = "0.2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.39", features = ["full"] }
toml = "0.8.19"
toolforge = { version = "5.0", features = ["mysql"] }
wikipedia_prosesize = "0.2.0"
