[package]
name = "dbreps2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0"
env_logger = "0.11.9"
git-version = "0.3.9"
log = "0.4"
mwbot = "0.8.0-rc.1"
mysql_async = { version = "0.36", default-features = false, features = ["minimal-rust"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
thousands = "0.2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.50", features = ["full"] }
toml = "1.0"
toolforge = { version = "5.0", features = ["mysql"] }
wikipedia_prosesize = "0.4.0-rc.1"
